# picoVSC

./: CMakeLists.txt  Notes.md  Notes.txt  rtcSet.c
